[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graph-maker"
description = "Create graph out of any text using a given ontology"
authors = [{name = "Nayak", email = "rahul.nyk@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "langchain>=0.0.335",
    "pandas",
    "numpy",
    "pypdf",
    "unstructured",
    "pathlib",
    "networkx",
    "pyvis",
    "seaborn",
    "uuid",
    "jupyterlab",
    "yachalk",
    "groq==0.5.0",
    "python-dotenv",
    "neo4j",
    "neomodel",
    "openai",
]
dynamic = ["version"]

[tool.hatch.version]
path = "graph_maker/__init__.py"
